WIP: Replace Oxide with QtWebEngine

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(Qt5Core)
 find_package(Qt5Qml)
 find_package(Qt5Quick)
 find_package(Qt5Organizer)
+find_package(Qt5WebEngine)
 
 add_subdirectory(libqtevernote)
 add_subdirectory(account-plugin)
