--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,6 @@ Build-Depends: cmake,
                gettext,
                intltool,
                libboost-dev,
-               liboxideqt-qmlplugin,
                libssl-dev,
                pkg-config,
                python3-all:any,
@@ -18,6 +17,7 @@ Build-Depends: cmake,
                qml-module-ubuntu-onlineaccounts,
                qtdeclarative5-dev,
                qtdeclarative5-dev-tools,
+               qtwebengine5-dev,
                qml-module-ubuntu-onlineaccounts-client (>= 0.3+14.10.20140506),
                qml-module-qtquick-layouts,
                qtdeclarative5-ubuntu-content1,
@@ -33,7 +33,6 @@ Vcs-Bzr: https://code.launchpad.net/~reminders-app-dev/reminders-app/trunk
 Package: notes-app
 Architecture: any
 Depends: account-plugin-evernote,
-         liboxideqt-qmlplugin,
          qml-module-ubuntu-connectivity,
          qml-module-ubuntu-onlineaccounts,
          qtdeclarative5-evernote0.1,
@@ -41,6 +40,7 @@ Depends: account-plugin-evernote,
          qml-module-ubuntu-onlineaccounts-client (>= 0.3+14.10.20140506),
          qml-module-qtquick2,
          qml-module-qtquick-layouts,
+         qml-module-qtwebengine,
          qtdeclarative5-ubuntu-push-plugin,
          qml-module-ubuntu-components | qt-components-ubuntu,
          signon-plugin-oauth2 (>= 0.19-0~57~),
